--- a/Assignments/ReadMe
+++ b/Assignments/ReadMe
@@ -1,1 +1,8 @@
 
+Rosbag of Assignment 1B -> 2021-07-26-02-19-42.bag
+Rosbag of Assignment 1C -> baggy1c_2021-07-28-06-25-02.bag
+Launch file of Assignment 1C -> sim.launch
+Assignment 1B -> Submission 1B
+Assignment 1C -> Submission 1C
+rqt_graph of 1B -> rqt_graph_1B
+rqt_graph of 1C -> rqt_graph_1C
